Working on fixes
 Duration header fixed
       ? on Filter Removal
    Fixed tags alignment
       ? on Moving bytes to end
    Fixed exit status justification
    Fixed References Header name
      Added requirement dash bootstrap components for simple rows in docker
    Added and aligned search button with bootstrap
    Renamed Raw button
    Temporary fix on column sizing
      Included autosize function
    Percents need work on sorting Search for Doppelganger columns

--- a/assets/KQrXdb.css
+++ b/assets/KQrXdb.css
@@ -57,7 +57,7 @@ span.column-header-name {
 }
 
 #table-multicol-sorting > div.dash-spreadsheet-container.dash-spreadsheet.dash-freeze-top.dash-fill-width > div > div.row.row-0 > div.cell.cell-0-1.dash-fixed-row > table > tbody > tr:nth-child(1) {
-    height: 200px;
+    height: 80px;
 }
 
 th.dash-header[class*=" column-"] > div {
@@ -76,7 +76,7 @@ svg.svg-inline--fa.fa-sort.fa-w-10 {
 
  .subpage {
 	  padding: 10px;
-	  border: 5px #ccc solid;
+	  /*border: 5px #ccc solid;*/
 	  /*height: 257mm;*/
 	  /*outline: 2cm whitesmoke solid;*/
  }
