--- a/assets/KQrXdb.css
+++ b/assets/KQrXdb.css
@@ -30,18 +30,18 @@ body {
 /* Top Right toolbar */
 div[id="switches"]{
 	padding: 5px;
-    position: fixed;
-    top: 74px;
-    right: 72px;
-    z-index: 310;
     background-color: lightgray;
     border-radius: 15px;
     margin: 15px;
-    width: 260px;
+    width: 80px;
     justify-content: space-between;
 }
 
-/*Used for resizing the sort buttons*/
+th.dash-header[class*=" column-"]:hover {
+	/*background-color: aqua;*/
+	height: 100px;
+}
+/*Used for resizing the sort buttons and header titles*/
 span.column-header--sort{
 	width: 100%;
     height: 100%;
@@ -52,14 +52,12 @@ span.column-header--sort{
 }
 span.column-header-name {
 	position: relative;
-	top:-60%;
-	/*left: -8px;*/
+	top:-59px;
+	/*left: -5%;*/
 }
-
 #table-multicol-sorting > div.dash-spreadsheet-container.dash-spreadsheet.dash-freeze-top.dash-fill-width > div > div.row.row-0 > div.cell.cell-0-1.dash-fixed-row > table > tbody > tr:nth-child(1) {
     height: 80px;
 }
-
 th.dash-header[class*=" column-"] > div {
 	display: block; /*initial*/
 	height: 100%;
@@ -212,7 +210,7 @@ a {
 	border-left-style: none;
 }
 
-/* .tab:focus {
+.tab:focus {
 	border-style: solid;
     border-color: rgba(0,0,0,1);
     border-bottom-style: none;
@@ -222,7 +220,7 @@ a {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-} */
+}
 
 #page-content > div:nth-child(n+2) > a {
   visibility: hidden;
