--- a/assets/KQrXdb.css
+++ b/assets/KQrXdb.css
@@ -33,8 +33,8 @@ div[id="switches"]{
     background-color: lightgray;
     border-radius: 15px;
     margin: 15px;
-    width: 80px;
-    justify-content: space-between;
+    width: 130px;
+    /*justify-content: space-between;*/
 }
 
 th.dash-header[class*=" column-"]:hover {
