import mock if in the ui directory, fixed narrow job page number would barely display 2 decimal places by default, mock mode tab switching creates duplicate jobs & job creation needs work in mock mode

--- a/assets/KQrXdb.css
+++ b/assets/KQrXdb.css
@@ -11,6 +11,9 @@ body {
 	  box-sizing: border-box;
 	  -moz-box-sizing: border-box;
  }
+ #table-multicol-sorting > div.previous-next-container > div > input {
+	 width: fit-content;
+ }
  footer+div {
     margin: 20px;
 	display: flow-root;
