bugfix on bar graph, recent jobs workflow table font resize, work on bar op
Graphing by metric at the job level displaying per op accepts the url query paramater op=op or op=op_instance, default is op

--- a/assets/KQrXdb.css
+++ b/assets/KQrXdb.css
@@ -140,7 +140,7 @@ table.reversed tr:nth-child(odd) { background-color: #D7DBE1; -webkit-print-colo
 table.reversed tr:nth-child(even) { background-color: white; }
 
 table{ 
-	font-size: 0.95rem; 
+	/*font-size: 0.95rem; */
 	border-spacing: 0;
    border-collapse: collapse;
 }
