--- a/assets/KQrXdb.css
+++ b/assets/KQrXdb.css
@@ -7,6 +7,40 @@ body {
 	  font-size: 1.1rem;
 	  line-height: 1.3;
  }
+
+ ._dash-loading-callback {
+	box-shadow:0px 0px 30px #000000;
+	border: 10px solid #3a85a5;
+	border-top: 16px solid #8dc6d1;
+	border-bottom: 16px solid #8dc6d1;
+	border-radius: 50%;
+	width: 260px;
+	height: 160px;
+	animation: pulsate-bck 1.5s ease-in-out infinite; /*spin 5s linear infinite;*/
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top:15%;
+	content:url("/assets/mm_blue.png")
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
+  @keyframes pulsate-bck {
+	0% {
+	  transform: scale(1);
+	}
+	50% {
+	  transform: scale(0.9);
+	}
+	100% {
+	  transform: scale(1);
+	}
+  }
+
+  
  * {
 	  box-sizing: border-box;
 	  -moz-box-sizing: border-box;
